// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip should render a Chip 1`] = `
<div>
  <div
    class="   svelte-qh5bld"
    data-testid="chip"
  >
    <span
      class="label svelte-qh5bld"
    >
      test-label
    </span>
     
  </div>
</div>
`;

exports[`Chip should render a clickable Chip 1`] = `
<div>
  <div
    class=" clickable  svelte-qh5bld"
    data-testid="chip"
  >
    <span
      class="label svelte-qh5bld"
    >
      test-label
    </span>
     
  </div>
</div>
`;

exports[`Chip should render an active Chip 1`] = `
<div>
  <div
    class="active   svelte-qh5bld"
    data-testid="chip"
  >
    <span
      class="label svelte-qh5bld"
    >
      test-label
    </span>
     
  </div>
</div>
`;

exports[`Chip should render an clickable active Chip 1`] = `
<div>
  <div
    class="active clickable  svelte-qh5bld"
    data-testid="chip"
  >
    <span
      class="label svelte-qh5bld"
    >
      test-label
    </span>
     
  </div>
</div>
`;
